--- a/action.yml
+++ b/action.yml
@@ -73,11 +73,13 @@ runs:
         clean: ${{ inputs.clean }}
         lfs: ${{ inputs.lfs }}
         fetch-depth: 0
-        recursive: ${{ inputs.submodules }}
+        submodules: ${{ inputs.submodules }}
     - id: compute-version
       name: Compute version
       shell: bash
-      run: ./git-compute-version.sh
+      run: |
+        chmod +x ./git-compute-version.sh
+        ./git-compute-version.sh
     - id: event-inspection
       name: Inspect event
       shell: bash
