Fix ci workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - id: semver
-        uses: EasyDesk/action-semver-checkout@v0
+        uses: EasyDesk/action-semver-checkout@v0.2
       - if: ${{ steps.semver.outputs.should-release == 'true' }}
-        uses: EasyDesk/action-sem-ver-release@v0
+        uses: EasyDesk/action-sem-ver-release@v0.2
+        with:
+          version: ${{ steps.semver.outputs.version }}
