Use self repository as semver-checkout source

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
-  
 name: Composite Actions CI
 
 on:
@@ -13,8 +12,9 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - id: semver
-        uses: EasyDesk/action-semver-checkout@v0.2.5
-      - if: ${{ steps.semver.outputs.should-release == 'true' }}
+        uses: ./
+      - name: Release
+        if: ${{ steps.semver.outputs.should-release == 'true' }}
         uses: EasyDesk/action-semver-release@v0.2
         with:
           version: ${{ steps.semver.outputs.version }}
