--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Compute semantic version
         id: semver
-        uses: .
+        uses: ./
       - name: Release
         if: ${{ steps.semver.outputs.should-release == 'true' }}
         uses: EasyDesk/action-semver-release@v0.2
