--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,11 +17,9 @@ jobs:
           fetch-depth: 0
       - id: compute-version
         name: Compute version
-        run: |
-          chmod +x ./git-compute-version.sh
-          ./git-compute-version.sh
+        uses: ./
       - name: Release
-        if: ${{ steps.compute-version.outputs.is-dev-version == 'false' }}
+        if: ${{ steps.compute-version.outputs.should-release == 'true' }}
         uses: EasyDesk/action-semver-release@v0.2
         with:
           version: ${{ steps.compute-version.outputs.version }}
