--- a/action.yml
+++ b/action.yml
@@ -82,5 +82,5 @@ runs:
       shell: bash
       run: |
         git fetch --tags --force # Required due to: https://github.com/actions/checkout/issues/290
-        chmod +x ./git-compute-version.sh
-        ./git-compute-version.sh
+        chmod +x ${GITHUB_ACTION_PATH}/git-compute-version.sh
+        "${GITHUB_ACTION_PATH}/git-compute-version.sh"
