Fix step id names

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
         uses: ./
       - name: Release
         if: ${{ steps.compute-version.outputs.should-release == 'true' }}
-        uses: EasyDesk/action-semver-release@v0.2
+        uses: EasyDesk/action-semver-release@v0
         with:
           version: ${{ steps.compute-version.outputs.version }}
+          prerelease: ${{ steps.compute-version.outputs.is-github-prerelease }}
